[package]
name = "advent_of_code23"
description = "Solutions to Advent of Code 2023 in Rust 🎄"
authors = ["Pedro Godinho <pedro.fernandez.godinho@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
indoc = "2.0.4"
itertools = "0.12.0"
ndarray = "0.15.6"
num = "0.4.1"
rayon = "1.8.0"
regex = "1.10.2"
